--- a/templates/new_book.html
+++ b/templates/new_book.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 
-<form action="/new" method="post">
+<form action="/addbook" method="post">
     <div>
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" placeholder="Title" required autofocus>
     </div>
     <div>
         <label for="author">Author:</label>
-        <select id="author" name="author_id">
+        <select id="author_id" name="author_id">
         
         {% for author in all_authors %}
         <option value="{{author.id}}">{{author.first_name}} {{author.last_name}}</option>
