adds show and show book by id for GET method

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,8 @@
         <button class="trash-button">
             <i class="fa fa-trash-o fa-1x" style="color:rgb(229, 14, 150)" aria-hidden="true"></i>
         </button>
+        <br>
+        <a href="/{{book.id}}">Further details</a>
     </form>
 </ul>
 
