--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
-  <title>My Task List</title>
+  <title>{{page_title}} - Book Shop</title>
 </head>
 <body>
   <header>
