deletes unused classes

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,13 +11,13 @@
 <body>
   <header>
     <nav>
-      <ul class="menu">
+      <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/new">Add New Book</a></li>
       </ul>
     </nav>
   </header>
-  <div class="container">
+  <div>
     {% block content %}
     {% endblock %}
   </div>
