--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
 <ul>
     <li>{{book.title}}</li>
     <li>{{book.author.first_name}} {{book.author.last_name}}</li>
-    <form class="delete-form" action="/{{book.id}}/delete" method="post">
-        <button class="trash-button">
+    <form action="/{{book.id}}/delete" method="post">
+        <button>
             <i class="fa fa-trash-o fa-1x" style="color:rgb(229, 14, 150)" aria-hidden="true"></i>
         </button>
         <br>
