--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <ul>
     <div class="container-book-list">
     <li class="book-title">{{book.title}}</li>
-    <li>{{book.author.first_name}} {{book.author.last_name}}</li>
+    <li>By {{book.author.first_name}} {{book.author.last_name}}</li>
     <form action="/{{book.id}}/delete" method="post">
         <button>
             <i class="fa fa-trash-o fa-1x" style="color:rgb(229, 14, 150)" aria-hidden="true"></i>
