--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,24 @@
 {% extends "base.html" %}
 {% block content %}
-{% for book in all_books %}
-<ul>
-    <div class="container-book-list">
-    <li class="book-title">{{book.title}}</li>
-    <li>By {{book.author.first_name}} {{book.author.last_name}}</li>
-    <form action="/{{book.id}}/delete" method="post">
-        <button>
-            <i class="fa fa-trash-o fa-1x" style="color:rgb(229, 14, 150)" aria-hidden="true"></i>
-        </button>
-        <br>
-        <a href="/{{book.id}}">Further details</a>
-    </form>
-    </div>
-</ul>
+<div class="row">
+    {% for book in all_books %}
 
-{% endfor %}
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">{{book.title}}</h5>
+                    <p class="card-text">By {{book.author.first_name}} {{book.author.last_name}}</p>
+                    <form action="/{{book.id}}/delete" method="post">
+                        <button>
+                            <i class="fa fa-trash-o fa-1x" style="color:rgb(229, 14, 150)" aria-hidden="true"></i>
+                        </button>
+                        <br>
+                        <a href=""></a>
+                    </form>
+                    <a href="/{{book.id}}" class="btn btn-primary">Further details</a>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
+</div>
 {% endblock %}
