--- a/templates/show.html
+++ b/templates/show.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div>
-    <p>Title: {{display_book.title}}</p>
-    <hr>
-    <p>Author: {{display_book.author.first_name}} {{display_book.author.last_name}}</p>
-    <p><a href="/{{display_book.id}}/edit">Edit</a></p>
+<div class="card">
+    <div class="card-body">
+        <h5 class="card-title">Title: {{display_book.title}}</h5>
+        <p class="card-text">Author: {{display_book.author.first_name}} {{display_book.author.last_name}}</p>
+        <a href="/{{display_book.id}}/edit" class="btn btn-primary">Edit</a>
+    </div>
 </div>
-
 {% endblock %}
