--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     {% for book in all_books %}
 
         <div class="col-sm-6">
-            <div class="card">
+            <div class="card card-details">
                 <div class="card-body">
                     <h5 class="card-title">{{book.title}}</h5>
                     <p class="card-text">By {{book.author.first_name}} {{book.author.last_name}}</p>
