--- a/templates/show.html
+++ b/templates/show.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="card">
+<div class="card card-details">
     <div class="card-body">
         <h5 class="card-title">Title: {{display_book.title}}</h5>
         <p class="card-text">Author: {{display_book.author.first_name}} {{display_book.author.last_name}}</p>
